[gd_scene load_steps=31 format=2]

[ext_resource path="res://Images/Text.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/button1_label.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/button3_label.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/results_camera_colour.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/button4_label.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/button2_label.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/Results2_colour.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/question_colour.gd" type="Script" id=8]
[ext_resource path="res://Images/Colour Game/RED BUTTON COLOUR GAME.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/colourGameNode.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/Timer.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/wrong_counter_colour.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/correct_counter_colour.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/results_colour.gd" type="Script" id=14]
[ext_resource path="res://Scripts/Main Menu/sub_select/agility/colour_game/probably_delete__just_a_pass.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 87
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="."]
margin_left = 490.0
margin_top = 70.0
margin_right = 748.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "60 seconds remaining"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back Button" type="Button" parent="."]
margin_right = 120.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 520.0
margin_right = 698.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Colour Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer_box" type="Container" parent="."]
margin_top = 460.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1" type="Button" parent="Answer_box"]
material = SubResource( 4 )
margin_right = 260.0
margin_bottom = 260.0
rect_min_size = Vector2( 260, 260 )
icon = ExtResource( 9 )
flat = true

[node name="Label_1" type="RichTextLabel" parent="Answer_box/Answer1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.672
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -193.0
margin_right = 58.216
margin_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "YELLOW"
text = "YELLOW"
scroll_active = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2" type="Button" parent="Answer_box"]
margin_left = 340.0
margin_right = 600.0
margin_bottom = 260.0
rect_min_size = Vector2( 260, 260 )
icon = ExtResource( 9 )
flat = true

[node name="Label_2" type="RichTextLabel" parent="Answer_box/Answer2"]
anchor_left = 0.5
anchor_top = -0.113
anchor_right = 0.5
anchor_bottom = -0.113
margin_left = -100.56
margin_top = -29.942
margin_right = 100.44
margin_bottom = 30.058
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "center]\"YELLOW\"[/center]"
text = "center]\"YELLOW\"[/center]"
scroll_active = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer3" type="Button" parent="Answer_box"]
margin_left = 680.0
margin_right = 940.0
margin_bottom = 260.0
rect_min_size = Vector2( 260, 260 )
icon = ExtResource( 9 )
flat = true

[node name="Label_3" type="RichTextLabel" parent="Answer_box/Answer3"]
margin_left = 34.0
margin_top = -60.0
margin_right = 228.0
margin_bottom = -8.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "YELLOW"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer4" type="Button" parent="Answer_box"]
margin_left = 1020.0
margin_right = 1284.0
margin_bottom = 260.0
rect_min_size = Vector2( 260, 260 )
icon = ExtResource( 9 )
flat = true

[node name="Label_4" type="Label" parent="Answer_box/Answer4"]
margin_left = 35.0
margin_top = -60.0
margin_right = 239.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YELLOW"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionBox" type="Container" parent="."]
anchor_bottom = 0.21
margin_left = 525.919
margin_top = 312.347
margin_right = 835.919
margin_bottom = 383.947
__meta__ = {
"_edit_use_anchors_": false
}

[node name="questionnn" type="RichTextLabel" parent="QuestionBox"]
margin_top = -90.0
margin_right = 450.0
margin_bottom = 70.0
custom_fonts/normal_font = SubResource( 9 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "QUESTION"
script = ExtResource( 8 )

[node name="accuracy_box" type="Container" parent="."]
margin_top = 60.0
margin_right = 1280.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="correct" type="Label" parent="accuracy_box"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.00784314, 0.815686, 0.247059, 1 )
custom_colors/font_color_shadow = Color( 0.0327148, 0.523438, 0.178026, 1 )
text = "You have got: %s right"
script = ExtResource( 13 )

[node name="False" type="Label" parent="accuracy_box"]
margin_left = 752.0
margin_right = 1280.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.87451, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.673828, 0.0236893, 0.0236893, 1 )
text = "You have got:  %s wrong"
script = ExtResource( 12 )

[node name="Results" type="Label" parent="."]
margin_left = 1880.0
margin_right = 2149.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You got x right and y wrong"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="results_camera" type="Camera2D" parent="Results"]
offset = Vector2( 635, 361 )
script = ExtResource( 4 )

[node name="Results2" type="Label" parent="."]
margin_left = 2620.0
margin_right = 4058.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You got x right and y wrong"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highScoreAndOtherSavedVariables" type="Node" parent="."]
script = ExtResource( 15 )

[node name="reset_highscore" type="Button" parent="."]
margin_left = 2894.0
margin_top = 461.0
margin_right = 3155.0
margin_bottom = 722.0
custom_fonts/font = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="reset_highscore"]
margin_left = 30.0
margin_top = 12.0
margin_right = 290.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 14 )
text = "Reset
High
Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="."]
margin_left = 1875.0
margin_top = 611.0
margin_right = 2136.0
margin_bottom = 722.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back_button"]
anchor_left = 0.00911271
anchor_right = 0.00911271
margin_left = 10.0
margin_top = -1.0
margin_right = 270.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 15 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="empty" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back Button" to="." method="back_button"]
[connection signal="pressed" from="Answer_box/Answer1" to="Answer_box/Answer1/Label_1" method="Answer1_pressed"]
[connection signal="pressed" from="Answer_box/Answer2" to="Answer_box/Answer2/Label_2" method="Answer2_pressed"]
[connection signal="pressed" from="Answer_box/Answer3" to="Answer_box/Answer3/Label_3" method="Answer3_pressed"]
[connection signal="pressed" from="Answer_box/Answer4" to="Answer_box/Answer4/Label_4" method="Answer4_pressed"]
[connection signal="pressed" from="reset_highscore" to="accuracy_box/correct" method="_on_reset_highscore_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
